--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,31 @@
+html{
+  font-family:  Geneva, sans-serif;
+  background-image: url(hatter.jpg);
+}
+#tartalom{
+  width: 900px;
+  margin: auto;
+  margin-top: 20px;
+}
+.keret img{
+  padding-bottom: 10px;
+  width: 800px;
+  border-bottom: solid 3px rgb(58, 189, 201);
+}
+h1,h2{
+  font-style: italic;
+}
+a,a:visited,a:active{
+  color: rgb(58, 189, 201);
+  text-decoration: none;
+}
+a:hover{
+  color: yellow;
+}
+p{
+  text-align: justify;
+  text-indent: 20px;
+}
 body {
   background-attachment: fixed;
   background-size: cover;
@@ -43,4 +71,12 @@ th,
 td {
   border: 1px solid rgb(58, 189, 201);
   padding: 5px;
+}
+.tablecenter{
+  
+  text-align: center;
+}
+.azure{
+  color: cyan;
+  font-weight: bold;
 }
